[gd_scene load_steps=4 format=3 uid="uid://dy6f2xgij1lo2"]

[ext_resource type="Script" uid="uid://bpnih25wenn56" path="res://Scripts/stage_select.gd" id="1_bn3nu"]
[ext_resource type="Texture2D" uid="uid://der44epobbuul" path="res://temp/testbg.jpg" id="2_rooga"]
[ext_resource type="FontFile" uid="uid://bur2jhbh8pnf0" path="res://Assets/BoldPixels.ttf" id="3_x57uv"]

[node name="StageSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bn3nu")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(392, 584)
scale = Vector2(0.395895, 0.395895)
texture = ExtResource("2_rooga")
metadata/_edit_lock_ = true

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 360.0
offset_top = 48.0
offset_right = 827.0
offset_bottom = 132.0
theme_override_fonts/font = ExtResource("3_x57uv")
theme_override_font_sizes/font_size = 84
text = "Select Stage"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 520.0
offset_top = 552.0
offset_right = 629.0
offset_bottom = 587.0
theme_override_fonts/font = ExtResource("3_x57uv")
theme_override_font_sizes/font_size = 26
text = "Back"

[node name="Stage1" type="Button" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 216.0
offset_right = 360.0
offset_bottom = 251.0
theme_override_fonts/font = ExtResource("3_x57uv")
theme_override_font_sizes/font_size = 26
text = "Stage 1"

[node name="Stage2" type="Button" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 264.0
offset_right = 360.0
offset_bottom = 299.0
theme_override_fonts/font = ExtResource("3_x57uv")
theme_override_font_sizes/font_size = 26
text = "Stage 2"

[node name="Stage3" type="Button" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 312.0
offset_right = 360.0
offset_bottom = 347.0
theme_override_fonts/font = ExtResource("3_x57uv")
theme_override_font_sizes/font_size = 26
text = "Stage 3
"

[node name="Stage4" type="Button" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 360.0
offset_right = 360.0
offset_bottom = 395.0
theme_override_fonts/font = ExtResource("3_x57uv")
theme_override_font_sizes/font_size = 26
text = "Stage 4
"

[node name="Stage5" type="Button" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 408.0
offset_right = 360.0
offset_bottom = 443.0
theme_override_fonts/font = ExtResource("3_x57uv")
theme_override_font_sizes/font_size = 26
text = "Stage 5
"

[node name="Stage6" type="Button" parent="."]
layout_mode = 0
offset_left = 824.0
offset_top = 216.0
offset_right = 992.0
offset_bottom = 251.0
theme_override_fonts/font = ExtResource("3_x57uv")
theme_override_font_sizes/font_size = 26
text = "Stage 6
"

[node name="Stage7" type="Button" parent="."]
layout_mode = 0
offset_left = 824.0
offset_top = 264.0
offset_right = 992.0
offset_bottom = 299.0
theme_override_fonts/font = ExtResource("3_x57uv")
theme_override_font_sizes/font_size = 26
text = "Stage 7"

[node name="Stage8" type="Button" parent="."]
layout_mode = 0
offset_left = 824.0
offset_top = 312.0
offset_right = 992.0
offset_bottom = 347.0
theme_override_fonts/font = ExtResource("3_x57uv")
theme_override_font_sizes/font_size = 26
text = "Stage 8"

[node name="Stage9" type="Button" parent="."]
layout_mode = 0
offset_left = 824.0
offset_top = 360.0
offset_right = 992.0
offset_bottom = 395.0
theme_override_fonts/font = ExtResource("3_x57uv")
theme_override_font_sizes/font_size = 26
text = "Stage 9"

[node name="Stage10" type="Button" parent="."]
layout_mode = 0
offset_left = 824.0
offset_top = 408.0
offset_right = 992.0
offset_bottom = 443.0
theme_override_fonts/font = ExtResource("3_x57uv")
theme_override_font_sizes/font_size = 26
text = "Stage 10"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Stage1" to="." method="_on_stage_1_pressed"]
[connection signal="pressed" from="Stage2" to="." method="_on_stage_2_pressed"]
[connection signal="pressed" from="Stage3" to="." method="_on_stage_3_pressed"]
[connection signal="pressed" from="Stage4" to="." method="_on_stage_4_pressed"]
[connection signal="pressed" from="Stage5" to="." method="_on_stage_5_pressed"]
[connection signal="pressed" from="Stage6" to="." method="_on_stage_6_pressed"]
[connection signal="pressed" from="Stage7" to="." method="_on_stage_7_pressed"]
[connection signal="pressed" from="Stage8" to="." method="_on_stage_8_pressed"]
[connection signal="pressed" from="Stage9" to="." method="_on_stage_9_pressed"]
[connection signal="pressed" from="Stage10" to="." method="_on_stage_10_pressed"]
